add util copyOverwriteObjectState freeDirectBuffer